// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Table component should render correctly with action 1`] = `
<div>
  <table
    class="table"
  >
    <thead>
      <tr
        class="tr"
      >
        <th
          class="th"
        >
          Nome
        </th>
        <th
          class="th"
        >
          Rua
        </th>
        <th
          class="th"
        >
          Cidade
        </th>
        <th
          class="th"
        >
          País
        </th>
        <th
          class="th"
        >
          Peso
        </th>
        <th
          class="th"
        >
          Lat
        </th>
        <th
          class="th"
        >
          Lng
        </th>
        <th
          class="th"
        >
          Action
        </th>
      </tr>
    </thead>
    <tbody>
      <tr
        class="tr"
      >
        <td
          class="td"
        >
          Eduardo
        </td>
        <td
          class="td"
        >
          R. Ática
        </td>
        <td
          class="td"
        >
          São Paulo
        </td>
        <td
          class="td"
        >
          Brasil
        </td>
        <td
          class="td"
        >
          10
        </td>
        <td
          class="td"
        >
          -23.531
        </td>
        <td
          class="td"
        >
          -46.584
        </td>
        <td
          class="td"
        >
          <button
            data-testid="button"
          >
            Action
          </button>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`Table component should render correctly without action 1`] = `
<div>
  <table
    class="table"
  >
    <thead>
      <tr
        class="tr"
      >
        <th
          class="th"
        >
          Nome
        </th>
        <th
          class="th"
        >
          Rua
        </th>
        <th
          class="th"
        >
          Cidade
        </th>
        <th
          class="th"
        >
          País
        </th>
        <th
          class="th"
        >
          Peso
        </th>
        <th
          class="th"
        >
          Lat
        </th>
        <th
          class="th"
        >
          Lng
        </th>
      </tr>
    </thead>
    <tbody>
      <tr
        class="tr"
      >
        <td
          class="td"
        >
          Eduardo
        </td>
        <td
          class="td"
        >
          R. Ática
        </td>
        <td
          class="td"
        >
          São Paulo
        </td>
        <td
          class="td"
        >
          Brasil
        </td>
        <td
          class="td"
        >
          10
        </td>
        <td
          class="td"
        >
          -23.531
        </td>
        <td
          class="td"
        >
          -46.584
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;
